--- a/templates/signin.html
+++ b/templates/signin.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form action="/login" method="post">
+    <form action="/signin" method="post">
         <div>
             <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
         </div>
