logout & profile basic done

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Stocks
+    Profile
 {% endblock %}
-
+    
 {% block main %}
-<a href="/">Index</a>
-<a href="/message">Message</a>
+    Profile page
 {% endblock %}
