--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,10 +31,11 @@
                     <ul>
                         <li><a href="/">Index</a></li>
                         <li><a href="/profile">{{ name }}</a></li>
+                        <li><a href="/message">Message</a></li>
                         <li><a href="/logout">Log Out</a></li>
                     </ul>
                 {% else %}
-                    <ul class="navbar-nav ml-auto mt-2">
+                    <ul>
                         <li><a href="/signup">Sign Up</a></li>
                         <li><a href="/signin">Log In</a></li>
                     </ul>
