--- a/templates/message.html
+++ b/templates/message.html
@@ -1,10 +1,9 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Stocks
+    Message
 {% endblock %}
 
 {% block main %}
-<a href="/">Index</a>
-<a href="/profile">Profile</a>
+    Message page
 {% endblock %}
