profile general function

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,5 +5,16 @@
 {% endblock %}
     
 {% block main %}
-    Profile page
+<div>
+    <a href="/username">Change Username</a>
+</div>
+<div>
+    <a href="/password">Change Password</a>
+</div>
+<div>
+    <a href="/email">Change Email</a>
+</div>
+<div>
+    <a href="/picture">Change Picture</a>
+</div>
 {% endblock %}
