--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,11 +12,13 @@
             <input id="username" autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
         </div>
         <br>
+
         <div>
             <p>Email.</p>
             <input id="email" autocomplete="off" autofocus class="form-control" name="email" placeholder="Email" type="text">
         </div>
         <br>
+
         <div>
             <p>Password (7 to 15 characters, 1 numeric, 1 special).</p>
             <input id="password" name="password" placeholder="Password" type="password">
@@ -25,6 +27,13 @@
             <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password">
         </div>
         <br>
+
+        <div>
+            <p>Profile picture (32mb max).</p>
+            <input type="file" id="myFile" name="filename">
+            <input type="submit" value="Upload">
+        </div>
+        
         <button id="submit" type="submit">Sign Up</button>
         <br>
     </form>
