profile update basics done

--- a/templates/password.html
+++ b/templates/password.html
@@ -15,4 +15,24 @@
         <button id="updatePassword" type="submit">Update</button>
     </div>
 </form>
+
+<script>
+
+    document.querySelector("#updatePassword").disabled = true;
+
+    document.querySelector("#confirm-pass").onkeyup = function() {
+        let password = document.querySelector("#password").value;
+        let confirmation = document.querySelector("#confirm-pass").value;
+
+        if (password.match(/^^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{7,15}$/i)) {
+            document.querySelector("#updatePassword").disabled = true;
+            if (confirmation === password) {
+                document.querySelector("#updatePassword").disabled = false;
+            }
+        }
+        else {
+            document.querySelector('#updatePassword').disabled = true;
+        }
+    }
+</script>
 {% endblock %}
