--- a/templates/signup.html
+++ b/templates/signup.html
@@ -39,7 +39,7 @@
     </form>
 
     <script>
-        // Password must be between 7 to 15 characters which contain at least one numeric digit and a special character
+        // Passwortrued must be between 7 to 15 characters which contain at least one numeric digit and a special character
         document.querySelector("#submit").disabled = true;
 
         document.querySelector("#confirm-pass").onkeyup = function() {
