--- a/templates/email.html
+++ b/templates/email.html
@@ -12,4 +12,20 @@
         <button id="updateEmail" type="submit">Update</button>
     </div>
 </form>
+
+<script>
+
+    document.querySelector("#updateEmail").disabled = true;
+
+    document.querySelector("#email").onkeyup = function() {
+        let email = document.querySelector("#email").value;
+
+        if (email.match(/^(([^<>()\[\]\.,;:\s@\"]+(\.[^<>()\[\]\.,;:\s@\"]+)*)|(\".+\"))@(([^<>()[\]\.,;:\s@\"]+\.)+[^<>()[\]\.,;:\s@\"]{2,})$/i)) {
+            document.querySelector("#updateEmail").disabled = false;
+        }
+        else {
+            document.querySelector('#updateEmail').disabled = true;
+        }
+    }
+</script>
 {% endblock %}
