--- a/templates/username.html
+++ b/templates/username.html
@@ -12,4 +12,21 @@
             <button id="updateUsername" type="submit">Update</button>
         </div>
     </form>
+
+    <script>
+
+        document.querySelector("#updateUsername").disabled = true;
+
+        document.querySelector("#username").onkeyup = function() {
+            let username = document.querySelector("#username").value;
+
+            if (username.length > 5 && username.match(/^[A-Za-z0-9 ]+$/)) {
+                document.querySelector("#updateUsername").disabled = false;
+
+            }
+            else {
+                document.querySelector('#updateUsername').disabled = true;
+            }
+        }
+    </script>
 {% endblock %}
