--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,6 +34,7 @@
                         <li><a href="/message">Message</a></li>
                         <li><a href="/logout">Log Out</a></li>
                     </ul>
+                    <img src="{{ picture }}" alt="Profile picture of {{ name }}"> 
                 {% else %}
                     <ul>
                         <li><a href="/signup">Sign Up</a></li>
