--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,9 +30,9 @@
 
         <div>
             <p>Profile picture (32mb max).</p>
-            <input type="file" id="myFile" name="filename">
-            <input type="submit" value="Upload">
+            <input type="file" id="picture" name="filename">
         </div>
+        <br>
         
         <button id="submit" type="submit">Sign Up</button>
         <br>
