API ImgBB default pic done

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -30,7 +30,7 @@
 
         <div>
             <p>Profile picture (32mb max).</p>
-            <input type="file" id="picture" name="filename">
+            <input type="file" id="picture" name="picture">
         </div>
         <br>
         
