--- a/templates/picture.html
+++ b/templates/picture.html
@@ -8,7 +8,7 @@
     <form action="/picture" method="post">
         <div>
             <p>Profile picture (32mb max).</p>
-            <input type="file" id="myFile" name="filename">
+            <input type="file" id="picture" name="picture">
             <input type="submit" value="Upload">
         </div>
     </form>
