Profile: delete done

--- a/templates/delete.html
+++ b/templates/delete.html
@@ -8,7 +8,7 @@
     <form action="/delete" method="post">
         <div>
             <p>Delete your account.</p>
-            <button id="deleteAccount" type="submit">Delete</button>
+            <button id="deleteAccount" name="deleteAccount" type="submit">Delete</button>
         </div>
     </form>
 {% endblock %}
