Confirmation email bug

--- a/templates/activate.html
+++ b/templates/activate.html
@@ -1,1 +1,8 @@
-Email to send
+Hello {{ name }},
+
+Welcome to the Crazy Plant Crew! 
+
+Thanks for signing up. Please enter this PIN code in the website within the next 10 min to activate your account.
+Your PIN: {{ pin }}
+
+See you soon online!
