--- a/templates/unconfirmed.html
+++ b/templates/unconfirmed.html
@@ -7,7 +7,15 @@
 {% block main %}
 <form action="/unconfirmed" method="post">
     <div>
-        <button id="submit" type="submit">Send email</button>
+        <input id="pin" autocomplete="off" autofocus class="form-control" name="pin" placeholder="Enter PIN" type="text">
+    </div>
+    <br>
+    <div>
+        <button id="confirm" type="submit" name="confirm">Confirm</button>
+    </div>
+    <br>
+    <div>
+        <button id="send" type="submit" name="send">Send email again?</button>
     </div>
     <br>
 </form>
