--- a/templates/unconfirmed.html
+++ b/templates/unconfirmed.html
@@ -11,11 +11,11 @@
     </div>
     <br>
     <div>
-        <button id="confirm" type="submit" name="confirm">Confirm</button>
+        <button id="confirm" type="submit" name="confirm" value="confirm">Confirm</button>
     </div>
     <br>
     <div>
-        <button id="send" type="submit" name="send">Send email again?</button>
+        <button id="send" type="submit" name="send" value="send">Send email again?</button>
     </div>
     <br>
 </form>
