Forgot email route

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -13,5 +13,7 @@
             <input name="password" placeholder="Password" type="password">
         </div>
         <button type="submit">Log In</button>
+        <br>
+        <a href="/forget">forgot password?</a>
     </form>
 {% endblock %}
