Admin page basic

--- a/templates/administration.html
+++ b/templates/administration.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Index
+    Message
 {% endblock %}
 
 {% block navigation %}
@@ -11,5 +11,5 @@
 {% endblock %}
 
 {% block main %}
-    Index page
+    Administration page
 {% endblock %}
