--- a/templates/password.html
+++ b/templates/password.html
@@ -4,6 +4,12 @@
     Password
 {% endblock %}
 
+{% block navigation %}
+    {% if role == "admin" %}
+        <li><a href="/administration">Administration</a></li>
+    {% endif %}
+{% endblock %}
+
 {% block main %}
 <form action="/password" method="post">
     <div>
