--- a/templates/username.html
+++ b/templates/username.html
@@ -4,6 +4,12 @@
     Username
 {% endblock %}
 
+{% block navigation %}
+    {% if role == "admin" %}
+        <li><a href="/administration">Administration</a></li>
+    {% endif %}
+{% endblock %}
+
 {% block main %}
     <form action="/username" method="post">
         <div>
