--- a/templates/communication.html
+++ b/templates/communication.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Administration
+    Communication
 {% endblock %}
 
 {% block navigation %}
@@ -11,16 +11,5 @@
 {% endblock %}
 
 {% block main %}
-<div>
-    <a href="/add">Add plant</a>
-</div>
-<div>
-    <a href="/remove">Remove plant</a>
-</div>
-<div>
-    <a href="/communication">Update blog</a>
-</div>
-<div>
-    <a href="/newsletter">Send newsletter</a>
-</div>
+    Communication page
 {% endblock %}
