--- a/templates/basket.html
+++ b/templates/basket.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Add
+    Basket
 {% endblock %}
 
 {% block navigation %}
@@ -11,5 +11,5 @@
 {% endblock %}
 
 {% block main %}
-    Add page
+    Basket page
 {% endblock %}
