--- a/templates/article.html
+++ b/templates/article.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Add
+    Articles
 {% endblock %}
 
 {% block navigation %}
@@ -11,5 +11,5 @@
 {% endblock %}
 
 {% block main %}
-    Add page
+    Article page
 {% endblock %}
