--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,9 +29,11 @@
             <div>
                 {% if session.user_id %}
                     <ul>
-                        <li><a href="/">Index</a></li>
+                        <li><a href="/">Plants</a></li>
+                        <li><a href="/basket">Basket</a></li>
+                        <li><a href="/article">Articles</a></li>
+                        <li><a href="/message">Messages</a></li>
                         <li><a href="/profile">{{ name }}</a></li>
-                        <li><a href="/message">Message</a></li>
                         {% block navigation %}{% endblock %}
                         <li><a href="/logout">Log Out</a></li>
                     </ul>
