--- a/templates/about.html
+++ b/templates/about.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Communication
+    About Us
 {% endblock %}
 
 {% block navigation %}
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block main %}
-    Communication page
+    About Us page
     <br>
     <div>
         <a href="/">Back</a>
