--- a/templates/administration.html
+++ b/templates/administration.html
@@ -11,16 +11,23 @@
 {% endblock %}
 
 {% block main %}
-<div>
-    <a href="/add">Add plant</a>
-</div>
-<div>
-    <a href="/remove">Remove plant</a>
-</div>
-<div>
-    <a href="/communication">Update blog</a>
-</div>
-<div>
-    <a href="/newsletter">Send newsletter</a>
-</div>
+    <div>
+        <a href="/add">Add plant</a>
+    </div>
+    <div>
+        <a href="/edit">Edit plant</a>
+    </div>
+    <div>
+        <a href="/remove">Remove plant</a>
+    </div>
+    <div>
+        <a href="/communication">Update blog</a>
+    </div>
+    <div>
+        <a href="/newsletter">Send newsletter</a>
+    </div>
+    <br>
+    <div>
+        <a href="/">Back</a>
+    </div>
 {% endblock %}
