--- a/templates/delete.html
+++ b/templates/delete.html
@@ -11,4 +11,8 @@
             <button id="deleteAccount" name="deleteAccount" type="submit">Delete</button>
         </div>
     </form>
+    <br>
+    <div>
+        <a href="/profile">Back</a>
+    </div>
 {% endblock %}
