--- a/templates/mailing.html
+++ b/templates/mailing.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Communication
+    Username
 {% endblock %}
 
 {% block navigation %}
@@ -11,9 +11,8 @@
 {% endblock %}
 
 {% block main %}
-    Communication page
-    <br>
+    Mailing page
     <div>
-        <a href="/">Back</a>
+        <a href="/profile">Back</a>
     </div>
 {% endblock %}
