--- a/templates/password.html
+++ b/templates/password.html
@@ -11,34 +11,38 @@
 {% endblock %}
 
 {% block main %}
-<form action="/password" method="post">
+    <form action="/password" method="post">
+        <div>
+            <p>Password (7 to 15 characters, 1 numeric, 1 special).</p>
+            <input id="password" name="password" placeholder="Password" type="password">
+        </div>
+        <div>
+            <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password">
+            <button id="updatePassword" type="submit">Update</button>
+        </div>
+    </form>
+    <br>
     <div>
-        <p>Password (7 to 15 characters, 1 numeric, 1 special).</p>
-        <input id="password" name="password" placeholder="Password" type="password">
+        <a href="/profile">Back</a>
     </div>
-    <div>
-        <input id="confirm-pass" name="confirm-password" placeholder="Confirm Password" type="password">
-        <button id="updatePassword" type="submit">Update</button>
-    </div>
-</form>
 
-<script>
+    <script>
 
-    document.querySelector("#updatePassword").disabled = true;
+        document.querySelector("#updatePassword").disabled = true;
 
-    document.querySelector("#confirm-pass").onkeyup = function() {
-        let password = document.querySelector("#password").value;
-        let confirmation = document.querySelector("#confirm-pass").value;
+        document.querySelector("#confirm-pass").onkeyup = function() {
+            let password = document.querySelector("#password").value;
+            let confirmation = document.querySelector("#confirm-pass").value;
 
-        if (password.match(/^^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{7,15}$/i)) {
-            document.querySelector("#updatePassword").disabled = true;
-            if (confirmation === password) {
-                document.querySelector("#updatePassword").disabled = false;
+            if (password.match(/^^(?=.*[0-9])(?=.*[!@#$%^&*])[a-zA-Z0-9!@#$%^&*]{7,15}$/i)) {
+                document.querySelector("#updatePassword").disabled = true;
+                if (confirmation === password) {
+                    document.querySelector("#updatePassword").disabled = false;
+                }
+            }
+            else {
+                document.querySelector('#updatePassword').disabled = true;
             }
         }
-        else {
-            document.querySelector('#updatePassword').disabled = true;
-        }
-    }
-</script>
+    </script>
 {% endblock %}
