--- a/templates/username.html
+++ b/templates/username.html
@@ -18,6 +18,10 @@
             <button id="updateUsername" type="submit">Update</button>
         </div>
     </form>
+    <br>
+    <div>
+        <a href="/profile">Back</a>
+    </div>
 
     <script>
 
