--- a/templates/edit.html
+++ b/templates/edit.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Communication
+    Edit
 {% endblock %}
 
 {% block navigation %}
@@ -11,9 +11,9 @@
 {% endblock %}
 
 {% block main %}
-    Communication page
+    Edit page
     <br>
     <div>
-        <a href="/">Back</a>
+        <a href="/administration">Back</a>
     </div>
 {% endblock %}
