--- a/templates/picture.html
+++ b/templates/picture.html
@@ -18,4 +18,8 @@
             <input type="submit" value="Upload">
         </div>
     </form>
+    <br>
+    <div>
+        <a href="/profile">Back</a>
+    </div>
 {% endblock %}
