Newsletter JS logic

--- a/templates/email.html
+++ b/templates/email.html
@@ -28,7 +28,7 @@
                 document.querySelector("#updateEmail").disabled = false;
             }
             else {
-                document.querySelector('#updateEmail').disabled = true;
+                document.querySelector("#updateEmail").disabled = true;
             }
         }
     </script>
