--- a/templates/mailing.html
+++ b/templates/mailing.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Username
+    Mailing
 {% endblock %}
 
 {% block navigation %}
@@ -11,8 +11,61 @@
 {% endblock %}
 
 {% block main %}
-    Mailing page
-    <div>
-        <a href="/profile">Back</a>
-    </div>
+    <form action="/mailing" method="post">
+        <div>
+            <input type="checkbox" id="activate" name="activate" value="activate">
+            <label for="activate"> Activate Newsletter</label><br>
+        </div>
+        <div>
+            <input type="checkbox" id="deactivate" name="deactivate" value="deactivate">
+            <label for="deactivate"> Deactivate Newsletter</label><br>
+        </div>
+        <div>
+            <button id="updateNewsletter" type="submit">Update</button>
+        </div>
+        <br>
+        <div>
+            <a href="/profile">Back</a>
+        </div>
+    </form>
+
+    <script>
+
+        let activate = document.getElementById("activate");
+        let deactivate = document.getElementById("deactivate");
+
+        document.querySelector("#updateNewsletter").disabled = true;
+
+        document.querySelector("#activate").onclick = function() {
+
+            if (activate.checked === true) {
+                deactivate.checked = false
+                document.querySelector("#updateNewsletter").disabled = false
+            }
+            else if (deactivate.checked === true) {
+                activate.checked = false
+                document.querySelector("#updateNewsletter").disabled = false
+            }
+            else {
+                document.querySelector("#updateNewsletter").disabled = true
+            }
+        }
+
+        document.querySelector("#deactivate").onclick = function() {
+
+            if (deactivate.checked === true) {
+                activate.checked = false
+                document.querySelector("#updateNewsletter").disabled = false
+            }
+            else if (activate.checked === true) {
+                deactivate.checked = false
+                document.querySelector("#updateNewsletter").disabled = false
+            }
+            else {
+                document.querySelector("#updateNewsletter").disabled = true
+            }
+        }
+
+
+    </script>
 {% endblock %}
