--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
                         <li><a href="/basket">Basket</a></li>
                         <li><a href="/article">Articles</a></li>
                         <li><a href="/about">About Us</a></li>
-                        <li><a href="/message">Messages</a></li>
+                        <li><a href="/message">Message Us</a></li>
                         <li><a href="/profile">{{ name }}</a></li>
                         {% block navigation %}{% endblock %}
                         <li><a href="/logout">Log Out</a></li>
