--- a/templates/mailing.html
+++ b/templates/mailing.html
@@ -14,11 +14,11 @@
     <form action="/mailing" method="post">
         <div>
             <input type="checkbox" id="activate" name="activate" value="activate">
-            <label for="activate"> Activate Newsletter</label><br>
+            <label for="activate"> Activate Newsletter.</label><br>
         </div>
         <div>
             <input type="checkbox" id="deactivate" name="deactivate" value="deactivate">
-            <label for="deactivate"> Deactivate Newsletter</label><br>
+            <label for="deactivate"> Deactivate Newsletter.</label><br>
         </div>
         <div>
             <button id="updateNewsletter" type="submit">Update</button>
