--- a/templates/signup.html
+++ b/templates/signup.html
@@ -43,8 +43,9 @@
             <label for="cookies">Accept website cookies</label><br>
         </div>
         <br>
-       
-        <button id="submit" type="submit">Sign Up</button>
+        <div>
+            <button id="submit" type="submit">Sign Up</button>
+        </div>
         <br>
     </form>
 
