--- a/templates/unconfirmed.html
+++ b/templates/unconfirmed.html
@@ -7,7 +7,7 @@
 {% block main %}
     <form action="/unconfirmed" method="post">
         <div>
-            <input id="pin" autocomplete="off" autofocus class="form-control" name="pin" placeholder="Enter PIN" type="text">
+            <input id="pin" autocomplete="off" autofocus class="form-control" name="pin" placeholder="Enter PIN" type="text" maxlength="12">
         </div>
         <br>
         <div>
