Add a plant logic

--- a/templates/add.html
+++ b/templates/add.html
@@ -13,7 +13,7 @@
 {% block main %}
     <form action="/add" method="post" enctype="multipart/form-data">
         <div>
-            <input id="name" autocomplete="off" autofocus class="form-control" name="plantname" placeholder="Name" type="text">
+            <input id="name" autocomplete="off" autofocus class="form-control" name="name" placeholder="Name" type="text">
         </div>
         <br>
         <div>
@@ -34,7 +34,7 @@
         </div>
         <br>
         <div>
-            <button id="submit" type="submit" name="submit" value="submit">Save plant.</button>
+            <button id="submit" type="submit" name="submit" value="submit">Save.</button>
         </div>
         <br>
         <div>
