--- a/templates/unconfirmed.html
+++ b/templates/unconfirmed.html
@@ -15,7 +15,7 @@
         </div>
         <br>
         <div>
-            <button id="send" type="submit" name="send" value="send">Send email again?</button>
+            <button id="send" type="submit" name="send" value="send">Send again?</button>
         </div>
         <br>
     </form>
