--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,8 @@
 {% block navigation %}
     {% if role == "admin" %}
         <li><a href="/administration">Administration</a></li>
+        <li></li><a href="/communication">Update blog</a></li>
+        <li></li><a href="/newsletter">Send newsletter</a></li>
     {% endif %}
 {% endblock %}
 
