--- a/templates/administration.html
+++ b/templates/administration.html
@@ -17,23 +17,25 @@
         <table>
             <thead>
                 <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Stock</th>
-                <th scope="col">Description</th>
-                <th scope="col">Show</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Stock</th>
+                    <th scope="col">Thumbnail</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Show</th>
                 </tr>
             </thead>
 
             <tbody>
             {% for plant in plants %}
-            <tr>
-                <td>{{ plant[1] }}</td>
-                <td>{{ plant[2] }}</td>
-                <td>{{ plant[4] }}</td>
-                <td>{{ plant[5] }}</td>
-                <td> <button name="delete" class="btn btn-primary" value="{{ plant[1] }}" type="submit">Delete</button> </td>
-                <td> <button name="edit" class="btn btn-primary" value="{{ plant[1] }}" type="submit">Edit</button> </td>
-            </tr>
+                <tr>
+                    <td>{{ plant[1] }}</td>
+                    <td>{{ plant[2] }}</td>
+                    <td><img src="{{ plant[3] }}" alt="plant picture of {{ plant[1] }}" height="50"></td>
+                    <td>{{ plant[4] }}</td>
+                    <td>{{ plant[5] }}</td>
+                    <td><button name="delete" value="{{ plant[0] }}" type="submit">Delete</button></td>
+                    <td><button name="edit" value="{{ plant[0] }}" type="submit">Edit</button></td>
+                </tr>
             {% endfor %}
             </tbody>
         </table>
