Add, Delete & Edit plants done

--- a/templates/add.html
+++ b/templates/add.html
@@ -23,6 +23,10 @@
         </div>
         <br>
         <div>
+            <input id="price" autocomplete="off" autofocus class="form-control" name="price" placeholder="Price" type="number" min="0">
+        </div>
+        <br>
+        <div>
             <textarea id="description" autocomplete="off" autofocus class="form-control" name="description" placeholder=" Description" type="text" cols="100" rows="10"></textarea>
         </div>
         <br>
